# Carberretta-Rust

./: .env  .env.example  Cargo.toml
src/: global_data.rs  main.rs
src/commands/: meta.rs
