[package]
name = "carberretta"
version = "0.1.0"
authors = ["kelsier"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
toml = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.psutil]
version = "3.2"
default-features = false
features = ["cpu",
            "disk",
            "host",
            "memory",
            "network",
            "process",
            "sensors",
            ]

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.serenity]
version = "0.9.0-rc.2"
default-features = false
features = [
            "builder", 
            "cache", 
            "client", 
            "framework", 
            "gateway", 
            "http", 
            "model", 
            "standard_framework", 
            "utils", 
            "native_tls_backend", 
            "absolute_ratelimits", 
            "collector",
            "voice"
            ]